# langgraph-fastapi-mcp-agent

./: .gitignore  .style.yapf  README.md  agent.py  config.py  main.py  pyproject.toml  test_client.py
agent/: graph.py  nodes.py  tools.py
api/: routes.py  schema.py
integrations/: http_client.py  news_api.py  weather_api.py
mcp_server/: server.py  tools.py
middleware/: cors.py  gzip.py
utilities/: logging.py
