[project]
name = "fa-endpoint"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all]>=0.136.3",
    "fastmcp>=3.4.0",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "sse-starlette>=3.4.4",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "yapf>=0.43.0",
]
